add task handler added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Todo App</title>
 </head>
 <body>
-    
+    <h1>Add Tasks</h1>
+
+    <input type="text" id="input-task">
+    <button id="add-task">Add</button>
+
+    <ul id="task-container"></ul>
+
+    <script src="./js/script.js"></script>
 </body>
 </html>
