--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 
     <ul id="task-container"></ul>
 
-    <script src="./js/script.js"></script>
+    <script type="module" src="./js/script.js"></script>
 </body>
 </html>
