Used a div to show error message instead of alert

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <input type="text" id="input-task">
     <button id="add-task">Add</button>
+    <div id="error-message" hidden>Error</div>
 
     <ul id="task-container"></ul>
 
