feat: search task feature done

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Todo App</title>
 </head>
 <body>
+    <input type="text" id="search-input">
+    <button id="search-button">Search</button>
+
     <h1>Add Tasks</h1>
 
     <input type="text" id="input-task">
