feat: add splash screen

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
         <link rel="stylesheet" href="./css/style.css" />
     </head>
     <body>
-        <header class="flex align-items-center">
+        <div class="splash" id="splash-screen">
+            <img src="./assets/logo.png" />
+        </div>
+
+        <header class="flex align-items-center hide">
             <div class="container flex flex-between">
                 <div class="flex align-items-center logo">
                     <img
@@ -26,7 +30,7 @@
             </div>
         </header>
 
-        <main class="container">
+        <main class="container hide">
             <section class="taskbar">
                 <h1 class="taskbar-title">Add Tasks</h1>
                 <div
