fix: apply filter on searched tasks

--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
                     <h1 class="logo-text">Todos</h1>
                 </div>
                 <div class="flex align-items-center search-wrapper">
-                    <input class="search-input" type="text" id="search-input" />
+                    <input
+                        class="search-input"
+                        type="text"
+                        id="search-input"
+                        hidden
+                    />
                     <button class="flex button-icon" id="search-button">
                         <img src="./assets/search-icon.svg" alt="Search Icon" />
                     </button>
