--- a/index.html
+++ b/index.html
@@ -116,7 +116,12 @@
             </section>
         </main>
 
-        <button class="button-ternary load-more-button hide">Load More</button>
+        <button
+            class="button-ternary load-more-button hide"
+            id="pagination-button"
+        >
+            Load More
+        </button>
 
         <p class="flex hide" id="message"></p>
 
